RESOLVED FIXED199785
WebGL not supported on WKWebView on UIKit for Mac
https://bugs.webkit.org/show_bug.cgi?id=199785
Summary WebGL not supported on WKWebView on UIKit for Mac
Dean Jackson
Reported 2019-07-14 12:56:28 PDT
WebGL not supported on WKWebView on UIKit for Mac
Attachments
Patch (10.42 KB, patch)
2019-07-14 13:02 PDT, Dean Jackson
graouts: review+
Dean Jackson
Comment 1 2019-07-14 12:57:02 PDT
Dean Jackson
Comment 2 2019-07-14 13:02:43 PDT
Dean Jackson
Comment 3 2019-07-14 13:22:34 PDT
Note You need to log in before you can comment on or make changes to this bug.