WebGL not supported on WKWebView on UIKit for Mac https://bugs.webkit.org/show_bug.cgi?id=199785 <rdar://problem/52911449>

Reviewed by Antoine Quint.

Source/WebCore:

UIKit for Mac was not creating a CGLPixelFormatObj because
it wasn't using the code hidden in PLATFORM(MAC). Instead
we should be guarding for USE(OPENGL).

There are still some inconsistencies: <rdar://53062794>

Test: webgl/smell-test.html

* platform/graphics/cocoa/GraphicsContext3DCocoa.mm:
(WebCore::GraphicsContext3D::GraphicsContext3D):
(WebCore::GraphicsContext3D::allowOfflineRenderers const): We have to return
true for this, since we don't have access to the Window Server.

Source/WTF:

MacCatalyst has Apple Graphics Control, although
this area is very messy, see <rdar://53062794>.

* wtf/Platform.h:

LayoutTests:

Even though we don't yet run tests on UIKit for Mac, we
should have the most simple "is WebGL working?" ref test.

* webgl/smell-test-expected.html: Added.
* webgl/smell-test.html: Added.

Canonical link: https://commits.webkit.org/213657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247422 268f45cc-cd09-0410-ab3c-d52691b4dbfc